# quant-pipeline

./: .gitignore  DESIGN.md  PHASE1_1_CORRECTION_NOTES.md  PHASE1_3_FINAL_REPAIR_NOTES.md  PHASE1_FINAL_READINESS.md  PHASE1_FINAL_REPAIR_NOTES.md  PHASE1_FOUR_DIAGNOSTICS_READINESS.md  README.md  pyproject.toml
configs/: discovery_5m.yaml  interday_2a.yaml  phase1b_dual_factors.yaml  phase1b_only.yaml  phase1b_systematic.yaml  phase2_afternoon.yaml  phase2_baselines.yaml  phase2_combinations.yaml  phase2_persistence.yaml  phase2_symbols.yaml  phase2_walkforward.yaml  smoke_one_day.yaml  smoke_one_month.yaml
results/: README.md
results/phase1_5m_discovery_through_20260430/: INTERPRETATION.md  detailed_candidates.csv  feature_registry.csv  manifest.json  ranked_candidates.html  report.md  scan_coverage.csv  target_registry.csv
results/phase1_final_discovery_through_20260430/: INTERPRETATION.md  candidate_industry_diagnostics.csv  (+13 more)
src/: quant_pipeline_interday_2a_launcher.py  quant_pipeline_launcher.py  quant_pipeline_phase1b_launcher.py
tests/: test_phase1_corrections.py  test_phase1_final_discovery.py  test_phase1_final_repairs.py  test_phase1_four_diagnostics.py  test_phase1b_dual_factors.py  test_phase1b_end_to_end.py  test_phase1b_systematic.py  test_phase2_afternoon.py  test_phase2_combinations.py  test_phase2_persistence.py  test_phase2_strategy.py  test_phase2_symbols.py  test_phase2_walkforward.py  test_quant_pipeline_causality.py  test_quant_pipeline_phase1.py  test_quant_pipeline_timing.py  test_strategy_engine.py
tools/: pull_corporate_actions.py
(+94 files in other folders)
